--- a/css/style.scss
+++ b/css/style.scss
@@ -7233,6 +7233,200 @@ hr {
   color: #fff;
 }
 
+
+:root {
+	--hue: 29;
+	--bg: hsl(var(--hue),75%,50%);
+	--fg: hsl(var(--hue),75%,50%);
+	--primary: hsl(var(--hue),75%,50%);
+	--trans-dur: 0.3s;
+}
+.pl1 {
+	display: block;
+	width: 8em;
+	height: 8em;
+}
+.pl1__g,
+.pl1__rect,
+.pl2__rect,
+.pl2__rect-g,
+.pl3__rect {
+	animation: pl1-a 1.5s cubic-bezier(0.65,0,0.35,1) infinite;
+}
+.pl1__g {
+	transform-origin: 64px 64px;
+}
+.pl1__rect:first-child {
+	animation-name: pl1-b;
+}
+.pl1__rect:nth-child(2) {
+	animation-name: pl1-c;
+}
+.pl2__rect,
+.pl2__rect-g {
+	animation-name: pl2-a;
+}
+.pl2__rect {
+	animation-name: pl2-b;
+}
+.pl2__rect-g .pl2__rect {
+	transform-origin: 20px 128px;
+}
+.pl2__rect-g:first-child,
+.pl2__rect-g:first-child .pl2__rect {
+	animation-delay: -0.25s;
+}
+.pl2__rect-g:nth-child(2),
+.pl2__rect-g:nth-child(2) .pl2__rect {
+	animation-delay: -0.125s;
+}
+.pl2__rect-g:nth-child(2) .pl2__rect {
+	transform-origin: 64px 128px;
+}
+.pl2__rect-g:nth-child(3) .pl2__rect {
+	transform-origin: 108px 128px;
+}
+.pl3__rect {
+	animation-name: pl3;
+}
+.pl3__rect-g {
+	transform-origin: 64px 64px;
+}
+
+/* Dark theme */
+@media (prefers-color-scheme: dark) {
+	:root {
+		--bg: hsl(var(--hue),90%,10%);
+		--fg: hsl(var(--hue),90%,90%);
+	}
+}
+
+/* Animations */
+@keyframes pl1-a {
+	from {
+		transform: rotate(0);
+	}
+	80%,
+	to {
+		animation-timing-function: steps(1,start);
+		transform: rotate(90deg);
+	}
+}
+@keyframes pl1-b {
+	from {
+		animation-timing-function: cubic-bezier(0.33,0,0.67,0);
+		width: 40px;
+		height: 40px;
+	}
+	20% {
+		animation-timing-function: steps(1,start);
+		width: 40px;
+		height: 0;
+	}
+	60% {
+		animation-timing-function: cubic-bezier(0.65,0,0.35,1);
+		width: 0;
+		height: 40px;
+	}
+	80%,
+	to {
+		width: 40px;
+		height: 40px;
+	}
+}
+@keyframes pl1-c {
+	from {
+		animation-timing-function: cubic-bezier(0.33,0,0.67,0);
+		width: 40px;
+		height: 40px;
+		transform: translate(0,48px);
+	}
+	20% {
+		animation-timing-function: cubic-bezier(0.33,1,0.67,1);
+		width: 40px;
+		height: 88px;
+		transform: translate(0,0);
+	}
+	40% {
+		animation-timing-function: cubic-bezier(0.33,0,0.67,0);
+		width: 40px;
+		height: 40px;
+		transform: translate(0,0);
+	}
+	60% {
+		animation-timing-function: cubic-bezier(0.33,1,0.67,1);
+		width: 88px;
+		height: 40px;
+		transform: translate(0,0);
+	}
+	80%,
+	to {
+		width: 40px;
+		height: 40px;
+		transform: translate(48px,0);
+	}
+}
+@keyframes pl2-a {
+	from,
+	25%,
+	66.67%,
+	to  {
+		transform: translateY(0);
+	}
+	50% {
+		animation-timing-function: cubic-bezier(0.33,0,0.67,0);
+		transform: translateY(-80px);
+	}
+}
+@keyframes pl2-b {
+	from,
+	to {
+		animation-timing-function: cubic-bezier(0.33,0,0.67,0);
+		width: 40px;
+		height: 24px;
+		transform: rotate(180deg) translateX(0);
+	}
+	33.33% {
+		animation-timing-function: cubic-bezier(0.33,1,0.67,1);
+		width: 20px;
+		height: 64px;
+		transform: rotate(180deg) translateX(10px);
+	}
+	66.67% {
+		animation-timing-function: cubic-bezier(0.33,1,0.67,1);
+		width: 28px;
+		height: 44px;
+		transform: rotate(180deg) translateX(6px);
+	}
+}
+@keyframes pl3 {
+	from {
+		transform: translate(64px,0);
+		width: 64px;
+		height: 64px;
+	}
+	25% {
+		transform: translate(0,0);
+		width: 128px;
+		height: 32px;
+	}
+	50% {
+		transform: translate(0,0);
+		width: 64px;
+		height: 64px;
+	}
+	75% {
+		transform: translate(0,0);
+		width: 32px;
+		height: 128px;
+	}
+	to {
+		transform: translate(0,64px);
+		width: 64px;
+		height: 64px;
+	}
+}
+
 /* ---------------------------------------------------------
 	 pageFooter styles
 ---------------------------------------------------------*/
@@ -11038,8 +11232,6 @@ hr {
   right: 0;
   width: 6.250em;
   height: 6.250em;
-  -webkit-animation: rotate 2.4s linear infinite;
-  animation: rotate 2.4s linear infinite;
 }
 
 .loader-holder .white {
@@ -11048,171 +11240,9 @@ hr {
   left: 0;
   right: 0;
   background: white;
-  -webkit-animation: flash 2.4s linear infinite;
-  animation: flash 2.4s linear infinite;
   opacity: 0;
 }
 
-.loader-holder .dot {
-  position: absolute;
-  margin: auto;
-  width: 2.4em;
-  height: 2.4em;
-  border-radius: 100%;
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
-}
-
-.loader-holder .dot:nth-child(2) {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  background: #FF4444;
-  -webkit-animation: dotsY 2.4s linear infinite;
-  animation: dotsY 2.4s linear infinite;
-}
-
-.loader-holder .dot:nth-child(3) {
-  left: 0;
-  right: 0;
-  top: 0;
-  background: #FFBB33;
-  -webkit-animation: dotsX 2.4s linear infinite;
-  animation: dotsX 2.4s linear infinite;
-}
-
-.loader-holder .dot:nth-child(4) {
-  top: 0;
-  bottom: 0;
-  right: 0;
-  background: #99CC00;
-  -webkit-animation: dotsY 2.4s linear infinite;
-  animation: dotsY 2.4s linear infinite;
-}
-
-.loader-holder .dot:nth-child(5) {
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #33B5E5;
-  -webkit-animation: dotsX 2.4s linear infinite;
-  animation: dotsX 2.4s linear infinite;
-}
-
-@-webkit-keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  10% {
-    width: 6.250em;
-    height: 6.250em;
-  }
-  66% {
-    width: 2.4em;
-    height: 2.4em;
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-    width: 6.250em;
-    height: 6.250em;
-  }
-}
-
-@keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  10% {
-    width: 6.250em;
-    height: 6.250em;
-  }
-  66% {
-    width: 2.4em;
-    height: 2.4em;
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-    width: 6.250em;
-    height: 6.250em;
-  }
-}
-
-@-webkit-keyframes dotsY {
-  66% {
-    opacity: .1;
-    width: 2.4em;
-  }
-  77% {
-    opacity: 1;
-    width: 0;
-  }
-}
-
-@keyframes dotsY {
-  66% {
-    opacity: .1;
-    width: 2.4em;
-  }
-  77% {
-    opacity: 1;
-    width: 0;
-  }
-}
-
-@-webkit-keyframes dotsX {
-  66% {
-    opacity: .1;
-    height: 2.4em;
-  }
-  77% {
-    opacity: 1;
-    height: 0;
-  }
-}
-
-@keyframes dotsX {
-  66% {
-    opacity: .1;
-    height: 2.4em;
-  }
-  77% {
-    opacity: 1;
-    height: 0;
-  }
-}
-
-@-webkit-keyframes flash {
-  33% {
-    opacity: 0;
-    border-radius: 0%;
-  }
-  55% {
-    opacity: .6;
-    border-radius: 100%;
-  }
-  66% {
-    opacity: 0;
-  }
-}
-
-@keyframes flash {
-  33% {
-    opacity: 0;
-    border-radius: 0%;
-  }
-  55% {
-    opacity: .6;
-    border-radius: 100%;
-  }
-  66% {
-    opacity: 0;
-  }
-}
 
 /* ---------------------------------------------------------
 	 site animations
